fixedOverlapIssues

--- a/root/styles/application.css
+++ b/root/styles/application.css
@@ -20,6 +20,7 @@ header {
     position: fixed;
     width: 100%;
     height: 100px;
+    z-index: 999;
     top: 0;
     box-shadow: 0 5px 5px -2px rgba(0, 0, 0, 0.15);
 }
@@ -57,6 +58,7 @@ nav {
     width: 100px;
     height: 100vh;
     position: fixed;
+    z-index: 999;
     bottom: 0;
     box-shadow: 5px 0 5px -2px rgba(0, 0, 0, 0.15);
 }
@@ -76,11 +78,11 @@ nav {
     outline: none;
 }
 
-.active button {
+.active {
     box-shadow: inset -4px 0px 0px 0px #4d85fe;
 }
 
-.active button .fas {
+.active .fas {
     color: #4d85fe;
 }
 
@@ -90,6 +92,8 @@ nav {
 .pages {
     /* By default hide all pages */
     display: none;
+    position: relative;
+    z-index: 1;
 }
 
 main {
@@ -100,6 +104,8 @@ main {
 }
 
 .card {
+    position: relative;
+    z-index: -1;
     border-radius: 5px;
     display: inline-block;
     margin: 1rem;
